Fix format issue for group show and header, revert changes to app and temp header, shift grid responsibility to component

--- a/frontend/src/stylesheets/group_show/group_show.scss
+++ b/frontend/src/stylesheets/group_show/group_show.scss
@@ -6,30 +6,38 @@
   
   display: grid;
   // display: grid;
-  // grid-template-columns: 0.5fr 2fr 5fr 2fr 0.5fr;
-  // grid-template-rows: 0.5fr 2fr 3fr 3fr 1.5fr;
-  // gap: 15px 10px;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
   grid-row: 1 / 13;
   grid-column: 1 / 13;
   height: 100%;
   width: 100%;
-  background-color: rgb(241, 230, 221);
+  background-color: $body-lightest;
   h1 {
     font-family: 'Bodoni Moda', serif;
     font-weight: 600;
   }
 }
 
-// header placeholder
-.navbar-container {
+.gs-sub-header {
   border: 1px solid gray;
-  display: grid;
-  background-color: rgb(232, 216, 203);
-  grid-row: 1 / 2;
+  display: flex;
+  grid-row: 2 / 3;
   grid-column: 1 / 13;
-  align-items: center;
-  padding-left: 20px;
-} 
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 1rem;
+}
+// header placeholder
+// .navbar-container {
+//   border: 1px solid gray;
+//   display: grid;
+//   background-color: rgb(232, 216, 203);
+//   grid-row: 1 / 2;
+//   grid-column: 1 / 13;
+//   align-items: center;
+//   padding-left: 20px;
+// } 
 
 .gs-content {
   border: 1px solid gray;
@@ -45,15 +53,49 @@
   grid-column: 1 / 4;
   display: flex;
   flex-direction: column;
+  padding: 1rem;
+  
   h2 {
     font-family: 'Bodoni Moda', serif;
     font-weight: 700;
   }
+  overflow-y: auto;
 }
+
+.gs-user-li {
+  border: 1px solid gainsboro;
+  display: flex;
+  // align-items: center;
+  padding-top: 1rem;
+}
+
 
 .gs-games-container {
   border: 1px solid gray;
   grid-row: 3 / 12;
   grid-column: 4 / 13;
   display: flex;
+  flex-wrap: wrap;
+  overflow-y: auto;
+}
+
+.gs-games-list {
+  border: 1px solid gray;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  // height: 100%;
+  padding-top: 1rem;
+  justify-content: space-around;
+  
+
+}
+
+.gs-game-item {
+  border: 1px solid gray;
+  width: 20vh;
+  height: 20vh;
+  align-items: center;
+  justify-content: center;
+  
 }
