--- a/frontend/src/stylesheets/index.scss
+++ b/frontend/src/stylesheets/index.scss
@@ -18,16 +18,17 @@ html, body {
 }
 
 .app-container {
-  // display: flex;
-  // height: 100%;
-  // width: 100%;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(12, 1fr);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  // display: grid;
+  // grid-template-columns: repeat(12, 1fr);
+  // grid-template-rows: repeat(12, 1fr);
   // grid-template-columns: 0.5fr 2fr 5fr 2fr 0.5fr;
   // grid-template-rows: 0.5fr 2fr 3fr 3fr 1.5fr;
   // gap: 15px 10px;
-  height: 100%;
+  // height: 100%;
 }
 
 @import './nav/nav.scss';
